- Add code for upload parsed objects to the instance. - Add a log label to show information about the parsed data.
See #65928

--- a/src/webfrontend/ZooniverseImport.scss
+++ b/src/webfrontend/ZooniverseImport.scss
@@ -3,5 +3,10 @@
 // }
 
 .ez5-zooniverse-importer-list {
-	padding: 20px;
+	padding: 10px;
+}
+
+.ez5-zooniverse-importer-log-label p {
+	white-space: break-spaces;
+	margin-top: 10px;
 }
