easydb-plugin-zooniverse-import: added l10n keys, formatted overview text for affected records; see #65928

--- a/src/webfrontend/ZooniverseImport.scss
+++ b/src/webfrontend/ZooniverseImport.scss
@@ -1,12 +1,16 @@
-// .ez5-zooniverse-importer-modal {
-// 	padding: 20px;
-// }
+.ez5-zooniverse-importer-modal {
+	padding: 0px;
+}
 
 .ez5-zooniverse-importer-list {
-	padding: 10px;
+	padding: 20px;
+}
+
+.ez5-zooniverse-importer-log-label {
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 .ez5-zooniverse-importer-log-label p {
 	white-space: break-spaces;
-	margin-top: 10px;
 }
